# RRProject

./: .gitignore  .gitmodules
Docs/: requirements.md  subject area + subject's diagram.docx
ElPoTrade/: CMakeLists.txt  ElPoTrade.sln  ElPoTrade.vcxproj  ElPoTrade.vcxproj.filters  main.cpp
ElPoTrade/ProjectInst/database/: DB_FILE.db
ElPoTrade/ProjectInst/include/: LampScreen.h  ProductDataManager.h  ProductManager.h  common.h
ElPoTrade/ProjectInst/lib/: Common.lib  DataAccess.lib  GUI.lib  Services.lib
ElPoTrade/cmake_bin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ElPoTrade.sln  ElPoTrade.vcxproj  ElPoTrade.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
ElPoTrade/cmake_bin/database/: DB_FILE.db  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ElPoTrade/cmake_bin/icons/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ElPoTrade/cmake_bin/inc_files/Common/: Common.vcxproj  Common.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ElPoTrade/cmake_bin/inc_files/DataAccess/: DataAccess.vcxproj  DataAccess.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ElPoTrade/cmake_bin/inc_files/GUI/: GUI.vcxproj  GUI.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ElPoTrade/cmake_bin/inc_files/GUI/GUI_autogen/: mocs_compilation_Debug.cpp
ElPoTrade/cmake_bin/inc_files/GUI/GUI_autogen/include_Debug/EWIEGA46WW/: moc_LampScreen.cpp  moc_LampScreen.cpp.d  moc_MainScreen.cpp  moc_MainScreen.cpp.d  moc_ProductScreen.cpp  moc_ProductScreen.cpp.d  moc_ScreenStack.cpp  moc_ScreenStack.cpp.d
ElPoTrade/cmake_bin/inc_files/Libs/hiberlite/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  hiberlite.vcxproj  hiberlite.vcxproj.filters
ElPoTrade/cmake_bin/inc_files/Services/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Services.vcxproj  Services.vcxproj.filters  cmake_install.cmake
ElPoTrade/database/: CMakeLists.txt  DB_FILE.db
ElPoTrade/docs/: CMakeLists.txt
ElPoTrade/icons/: CMakeLists.txt
ElPoTrade/inc_files/: LampWidget.h  MainScreen.cpp  MainScreen.h  ProductDataManager.h  ProductManager.cpp  ProductManager.h  ProductScreen.cpp  ProductScreen.h  ScreenStack.cpp
ElPoTrade/inc_files/Common/: CMakeLists.txt  Contact.cpp  Contact.h  ItemDocument.cpp  ItemDocument.h  Lamp.cpp  Lamp.h  ProductGroup.cpp  ProductGroup.h  Suggestion.cpp  Suggestion.h
ElPoTrade/inc_files/DataAccess/: CMakeLists.txt  ProductDataManager.cpp  ProductDataManager.h
ElPoTrade/inc_files/GUI/: CMakeLists.txt  ContactScreen.cpp  ContactScreen.h  DocumentScreen.cpp  DocumentScreen.h  DownloadDocScreen.cpp  DownloadDocScreen.h  GroupScreen.cpp  GroupScreen.h  LampScreen.cpp  LampScreen.h  LampWidget.cpp  LampWidget.h  MainScreen.cpp  MainScreen.h  ProductScreen.cpp  ProductScreen.h  ScreenStack.cpp  ScreenStack.h  SuggestionScreen.cpp  SuggestionScreen.h
ElPoTrade/inc_files/Libs/hiberlite/: CMakeLists.txt
ElPoTrade/inc_files/Services/: CMakeLists.txt  ContactManager.cpp  ContactManager.h  DocumentManager.cpp  DocumentManager.h  GroupManager.cpp  GroupManager.h  ProductManager.cpp  ProductManager.h  ResourceManager.cpp  ResourceManager.h
GoogleTest/: GoogleTest.vcxproj  GoogleTest.vcxproj.filters
Test/: Test.cpp  Test.sln  Test.vcxproj  products.txt
UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters  main.cpp
UnitTests/database/: DB_FILE.db
