install(FILES	Catalog.pdf
		Declaration_of_conformity_DBO-02_20.05.2019.pdf
		Declaration_of_conformity_DKU-02_17.05.2020.pdf
		Declaration_of_conformity_DKU-02_20.05.2019.pdf
		ISO9001_2015.pdf
		Passport_DKU-01-48_72,84.pdf
		Passport_DVO-02-32_66,42.pdf
		Specifications_DBO-02.pdf
		Specifications_DKU-01.pdf
		Test_report_17_18_DBO-02-24_18.01.18.pdf
		Test_report_54_16_DBO-02-32.pdf
		Test_report_104_21_DKU-01.pdf
		Test_report_105_21_DBO-02-32.pdf
		Test_report_110_21_DKU-01-48.pdf
		Test_report_150_DKU-01-48_30.11.2018.pdf
		Test_report_181_19_DKU-01-48_20.05.2019\(Eurogames\).pdf
		Test_report_222_18_DKU-01-48_11.06.2018.pdf
		Test_report_227_18_DKU-01-48_13.06.18.pdf
		Test_report_396_18_DKU-01-48.pdf
		Test_report_DKU-01-48x2,0-001\(150\)_20.05.20.pdf DESTINATION docs)