install(FILES   DBO-01/dbo01-1.jpg
		DBO-01/dbo01-2.jpg
		DBO-01/dbo01-3.jpg
		DBO-01/dbo01-area.jpg DESTINATION icons/DBO-01)

install(FILES	DBO-02/dbo02-1.jpg
		DBO-02/dbo02-2.jpg
		DBO-02/dbo02-area.jpg DESTINATION icons/DBO-02)

install(FILES	DKU-01/dku01-1.jpg
		DKU-01/dku01-2.jpg
		DKU-01/dku01-3.jpg
		DKU-01/dku01-area.jpg DESTINATION icons/DKU-01)

install(FILES	DVO-01/dvo01-1.jpg
		DVO-01/dvo01-2.jpg
		DVO-01/dvo01-3.jpg
		DVO-01/dvo01-area.jpg DESTINATION icons/DVO-01)

install(FILES	BANNER.jpg DESTINATION icons)